--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 html, body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img { margin:0; padding:0; }
 fieldset, img,input,button { border:none; padding:0;margin:0;outline-style:none; }
 ul, ol { list-style:none; }
-input { padding-top:0; padding-bottom:0; font-family: "SimSun","宋体";}
+input { padding-top:0; padding-bottom:0; font-family: "Microsoft YaHei","宋体";}
 select, input { vertical-align:middle; }
 select, input, textarea { font-size:12px; margin:0; }
 textarea { resize:none; } /*防止拖动*/
@@ -238,7 +238,7 @@ s,i,em{font-style:normal;text-decoration:none;}
     padding-left:4px;
     float:left;
     font:14px/32px "Microsoft YaHei";
-    color:#666;
+    color:#999;
 }
 .search button{
     width:80px;
@@ -277,16 +277,18 @@ s,i,em{font-style:normal;text-decoration:none;}
     font-size:12px;
     line-height:14px;
     text-align:center;
+    margin:3px;
     color:#fff;
     border-radius:8px 8px 8px 0;
 }
  .hotword{
-    width:500px;
+    width:510px;
     padding:7px 0;
     float:left;
 }
  .hotword a{
-    margin-right:3px;
+    margin-right:4px;
+    color:#999;
 }
  /*导航栏*/
 .nav{
@@ -339,14 +341,15 @@ s,i,em{font-style:normal;text-decoration:none;}
 /*底部区域*/
 .footer{
     width:100%;
-    height:500px;
+    height:auto;
+    background-color: #eaeaea;
+    margin-top:30px;
 }
 
 .slogen{
     width:100%;
     height:100px;
-    border-bottom: 1px solid #dedede;
-    margin-botton:25px;
+    margin-bottom:25px;
 }
 .slogen .item{
    width:300px;
@@ -378,8 +381,8 @@ s,i,em{font-style:normal;text-decoration:none;}
 .cover-ser .look{
     text-align:right;
 }
-.footer .w{
-    border-top: 1px solid #e1e1e1;
+.footer .shopping{
+
     height:200px;
 }
 .links{
