--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,8 @@
 }
 .lun-left li a{
     color:#FFF;
+    font-size:14px;
+    font-weight: 600;
 }
 .lun-left li a:hover{
     color:#C81623;
@@ -78,12 +80,16 @@
     background-color:#FFF;
     float:right;
     z-index:-1;
+    font-size:12px;
 }
 .lun-right p{
     margin-top:15px;
     text-align:center;
-    font-size:14px;
     color:#666;
+    font-family: "Microsoft YaHei";
+}
+.lun-right p a{
+
 }
 .lun-right .fuli{
     margin:0 10px;
@@ -99,37 +105,55 @@
     margin-top:20px;
     width:210px;
     height:180px;
+
 }
 .tab li{
     position: relative;
     float: left;
-    width:68px;
-    height: 20px;
-    line-height:20px;
+    width:70px;
+    height: 25px;
+    line-height:25px;
     text-align: center;
     cursor: pointer;
     border:1px solid #ddd;
+    box-sizing:border-box;
+
+}
+.tab li:hover{
+    background-color:#C81623;
+}
+.tab li:hover a{
+    color:#FFF;
 }
 .products{
     width: 210px;
     border:1px solid #ddd;
     height: 180px;
-
+    box-sizing:border-box;
 }
 
 .products .main{
     float: left;
     display: none;
-    margin-left:20px;
-}
+    margin:0 10px;
 
+}
+.products .main p a{
+
+    overflow: hidden;
+    width:180px;
+    text-align: center;
+    margin:0 10px;
+}
 .products .main.selected{
     display: block;
+
 }
 .incos{
     width:210px;
     height:180px;
     border:1px solid #ddd;
+    box-sizing:border-box;
 
 }
 .incos li{
@@ -168,14 +192,13 @@
 /*倒计时*/
 .section3{
     width:100%;
-    height:430px;
+    height:auto;
     margin-top:10px;
 }
- .daojishi{
+ .daojishi {
     height:55px;
     background:url(../images/daojishi/seckill_hd.png) no-repeat 0 0;
     background-color:#C81623;
-    margin-buttom:100px;
      z-index:-1;
 }
 #demo{
@@ -185,9 +208,13 @@
     line-height:55px;
 
 }
+.bigbox{
+    margin-top:20px;
+    overflow: hidden;
 
+}
 #bigtu  ,#bigtu3 ,#bigtu4 {
-    height: 150px;
+    height: 170px;
     width: 220px;
     padding-top: 220px;
     border:1px solid #ccc;
@@ -197,7 +224,7 @@
     margin-right:25px;
 }
 #bigtu2{
-    height: 150px;
+    height: 170px;
     width: 220px;
     padding-top: 220px;
     border:1px solid #ccc;
@@ -207,7 +234,7 @@
     margin-right:25px;
 }
 #bigtu5{
-    height: 150px;
+    height: 170px;
     width: 220px;
     padding-top: 220px;
     border:1px solid #ccc;
@@ -233,6 +260,9 @@
     color:red;
     font-size:16px;
 }
+.name a{
+    color:#666;
+}
  .name i{
      color: #646fb0;
      font-family: verdana;
@@ -240,5 +270,6 @@
  }
  .name p{
     margin-top:5px;
+     color:#999;
 }
 
